force-app/main/default/objects/For_Github__c/For_Github__c.object-meta.xml
<CustomObject>
    <label>For Github</label>
    <nameField>
        <label>For Github Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>For Githubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>