force-app/main/default/objects/For_Github__c/fields/Git_Cities__c.field-meta.xml
<CustomField>
    <fullName>Git_Cities__c</fullName>
    <label>Git Cities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karachi</fullName>
            </value>
            <value>
                <fullName>Islamabad</fullName>
            </value>
            <value>
                <fullName>Rahim Yaar Khan</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Christchurch</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Downtown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>