force-app/main/default/objects/For_Github__c/fields/Git_Countries__c.field-meta.xml
<CustomField>
    <fullName>Git_Countries__c</fullName>
    <label>Git Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pakistan</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>