force-app/main/default/objects/For_Github__c/fields/Git_F_Formula__c.field-meta.xml
<CustomField>
    <fullName>Git_F_Formula__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Git F Formula</label>
    <type>Text</type>
</CustomField>